Migra ms-categoria de H2 a MySQL