@@ -1,8 +1,7 @@
-// src/main/java/com/example/ms_inventario/service/impl/InventarioServiceImpl.java
 package com.example.ms_inventario.service.impl;
 
-import com.example.ms_inventario.dto.StockDto;
 import com.example.ms_inventario.dto.ProductoDto;
+import com.example.ms_inventario.dto.StockDto;
 import com.example.ms_inventario.entity.Stock;
 import com.example.ms_inventario.feign.ProductoClient;
 import com.example.ms_inventario.repository.StockRepository;
@@ -11,11 +10,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
 public class InventarioServiceImpl implements InventarioService {
+
+    private static final String STOCK_NO_EXISTE_MSG = "No existe stock para producto id: ";
 
     private final StockRepository stockRepository;
     private final ProductoClient productoClient;
@@ -28,14 +28,16 @@ public class InventarioServiceImpl implements InventarioService {
     @Override
     public StockDto crearStockInicial(StockDto stockDto) {
         Long productoId = stockDto.getProductoId();
-        // Validar que el producto exista en ms_producto
+
         ProductoDto producto = productoClient.obtenerPorId(productoId);
         if (producto == null) {
             throw new IllegalArgumentException("Producto no existe con id: " + productoId);
         }
+
         if (stockRepository.existsByProductoId(productoId)) {
             throw new IllegalArgumentException("Ya existe stock para producto id: " + productoId);
         }
+
         Stock stock = new Stock(productoId, stockDto.getCantidad());
         Stock guardado = stockRepository.save(stock);
         return mapToDto(guardado);
@@ -44,7 +46,7 @@ public class InventarioServiceImpl implements InventarioService {
     @Override
     public StockDto obtenerStock(Long productoId) {
         Stock stock = stockRepository.findByProductoId(productoId)
-                .orElseThrow(() -> new IllegalArgumentException("No existe stock para producto id: " + productoId));
+                .orElseThrow(() -> new IllegalArgumentException(STOCK_NO_EXISTE_MSG + productoId));
         return mapToDto(stock);
     }
 
@@ -52,7 +54,7 @@ public class InventarioServiceImpl implements InventarioService {
     public List<StockDto> listarStocks() {
         return stockRepository.findAll().stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -60,8 +62,10 @@ public class InventarioServiceImpl implements InventarioService {
         if (cantidad <= 0) {
             throw new IllegalArgumentException("Cantidad a reponer debe ser mayor que cero");
         }
+
         Stock stock = stockRepository.findByProductoId(productoId)
-                .orElseThrow(() -> new IllegalArgumentException("No existe stock para producto id: " + productoId));
+                .orElseThrow(() -> new IllegalArgumentException(STOCK_NO_EXISTE_MSG + productoId));
+
         stock.setCantidad(stock.getCantidad() + cantidad);
         Stock actualizado = stockRepository.save(stock);
         return mapToDto(actualizado);
@@ -72,11 +76,14 @@ public class InventarioServiceImpl implements InventarioService {
         if (cantidad <= 0) {
             throw new IllegalArgumentException("Cantidad a reservar debe ser mayor que cero");
         }
+
         Stock stock = stockRepository.findByProductoId(productoId)
-                .orElseThrow(() -> new IllegalArgumentException("No existe stock para producto id: " + productoId));
+                .orElseThrow(() -> new IllegalArgumentException(STOCK_NO_EXISTE_MSG + productoId));
+
         if (stock.getCantidad() < cantidad) {
             throw new IllegalArgumentException("Stock insuficiente para producto id: " + productoId);
         }
+
         stock.setCantidad(stock.getCantidad() - cantidad);
         Stock actualizado = stockRepository.save(stock);
         return mapToDto(actualizado);
@@ -87,13 +94,15 @@ public class InventarioServiceImpl implements InventarioService {
         if (cantidad < 0) {
             throw new IllegalArgumentException("La cantidad debe ser mayor o igual a cero");
         }
-        // Validar producto
+
         ProductoDto producto = productoClient.obtenerPorId(productoId);
         if (producto == null) {
             throw new IllegalArgumentException("Producto no existe con id: " + productoId);
         }
+
         Stock stock = stockRepository.findByProductoId(productoId)
                 .orElseGet(() -> new Stock(productoId, 0));
+
         stock.setCantidad(cantidad);
         Stock actualizado = stockRepository.save(stock);
         return mapToDto(actualizado);
